00-mock-exam-questions-v2.0/solution-06/allowed-traffic-nginx-networkpolicy.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-nginx-ingress
  namespace: quickstart
spec:
  selector: app == 'nginx' # selected pods
  types:
  - Ingress
  ingress:
  - action: Allow
    source:
      selector: run == 'access'
